[gd_scene load_steps=19 format=2]

[ext_resource path="res://Enemies/Checkers/legs.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Checkers/Checkers.gd" type="Script" id=2]
[ext_resource path="res://World/Assets/Shadow.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Checkers/checker-red.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Checkers/checker-black.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 80.025

[sub_resource type="CapsuleShape2D" id=4]
radius = 22.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 15.0
height = 34.0

[sub_resource type="Animation" id=14]
resource_name = "Attack"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("RedCheckerBase:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 15 ), Vector2( 0, 17 ), Vector2( 0, -13 ), Vector2( 0, -40 ), Vector2( 0, 16 ), Vector2( 0, 17 ), Vector2( 0, 15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BlackCheckerBase:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 3 ), Vector2( 0, -30 ), Vector2( 0, -64 ), Vector2( 0, 3 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BlackCheckerFront:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -29 ), Vector2( 0, -24 ), Vector2( 0, -66 ), Vector2( 0, -101 ), Vector2( 0, -24 ), Vector2( 0, -29 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RedCheckerFront:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -13 ), Vector2( 0, -9 ), Vector2( 0, -46 ), Vector2( 0, -85 ), Vector2( 0, -9 ), Vector2( 0, -13 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Legs:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 30 ), Vector2( 0, 29 ), Vector2( 0, 4 ), Vector2( 0, -23 ), Vector2( 0, 29 ), Vector2( 0, 30 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, false, true ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_finished"
} ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Shadow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 35 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hurtbox:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Hurtbox:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 22 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("RedCheckerBase:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 15 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("RedCheckerFront:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -13 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("BlackCheckerBase:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("BlackCheckerFront:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -29 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Legs:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 30 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RedCheckerBase:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 15 ), Vector2( 5, 15 ), Vector2( 0, 15 ), Vector2( -5, 15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RedCheckerFront:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -13 ), Vector2( 5, -13 ), Vector2( 0, -13 ), Vector2( -5, -13 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BlackCheckerBase:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -5, 0 ), Vector2( 0, 0 ), Vector2( 5, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BlackCheckerFront:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -29 ), Vector2( -5, -29 ), Vector2( 0, -29 ), Vector2( 5, -29 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachine" id=5]
states/Attack/node = SubResource( 11 )
states/Attack/position = Vector2( 412, 115 )
states/Walk/node = SubResource( 9 )
states/Walk/position = Vector2( 241, 115 )
transitions = [ "Walk", "Attack", SubResource( 12 ), "Attack", "Walk", SubResource( 13 ) ]
start_node = "Walk"

[sub_resource type="AnimationNodeStateMachinePlayback" id=6]

[node name="Checkers" type="KinematicBody2D" groups=["Enemy"]]
position = Vector2( 0, -35 )
collision_mask = 9
script = ExtResource( 2 )

[node name="Shadow" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 35 )

[node name="Legs" type="Sprite" parent="."]
position = Vector2( 0, 30 )
texture = ExtResource( 1 )

[node name="RedCheckerBase" type="Sprite" parent="."]
position = Vector2( 0, 15 )
texture = ExtResource( 4 )

[node name="BlackCheckerBase" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="RedCheckerFront" type="Sprite" parent="."]
position = Vector2( 0, -13 )
texture = ExtResource( 4 )

[node name="BlackCheckerFront" type="Sprite" parent="."]
position = Vector2( 0, -29 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 24 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="LineOfSight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 300, 0 )
collision_mask = 12

[node name="DebugText" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_top = -53.0
margin_right = 16.0
margin_bottom = -37.0
text = "0"

[node name="Proximity" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 1 )
collision_layer = 0
collision_mask = 36

[node name="CollisionShape2D" type="CollisionShape2D" parent="Proximity"]
shape = SubResource( 2 )

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2( 2, 22 )
collision_layer = 0
collision_mask = 36

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -2, -27 )
shape = SubResource( 4 )
disabled = true

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 3, 0 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Walk"
anims/Attack = SubResource( 14 )
anims/RESET = SubResource( 7 )
anims/Walk = SubResource( 8 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 5 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 6 )

[connection signal="area_entered" from="Proximity" to="." method="_on_Proximity_area_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hurtbox_area_entered"]
